// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test existing resources 1`] = `
Object {
  "Resources": Object {
    "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWEventsRuleE1CDDC86": Object {
      "Properties": Object {
        "Description": "event rule props",
        "ScheduleExpression": "rate(5 minutes)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testexistingstreamA6CF7AE7",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWeventsRoleA4611D14",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWKinesisStreamGetRecordsIteratorAgeAlarm75C03BAF": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWKinesisStreamReadProvisionedThroughputExceededAlarmA3CD49C6": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWeventsRoleA4611D14": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWeventsRoleDefaultPolicy54FB5780": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testexistingstreamA6CF7AE7",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWeventsRoleDefaultPolicy54FB5780",
        "Roles": Array [
          Object {
            "Ref": "testeventsrulekinesisstreamexistingresourcetesteventsrulekinesisstreamexistingresourceWeventsRoleA4611D14",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testexistingstreamA6CF7AE7": Object {
      "Properties": Object {
        "Name": "existing-stream",
        "RetentionPeriodHours": 48,
        "ShardCount": 5,
      },
      "Type": "AWS::Kinesis::Stream",
    },
  },
}
`;

exports[`Test snapshot match with default parameters 1`] = `
Object {
  "Resources": Object {
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWEventsRule3B0BBD02": Object {
      "Properties": Object {
        "Description": "event rule props",
        "ScheduleExpression": "rate(5 minutes)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamEB30AB36",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRole02A0AEFA",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamEB30AB36": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamGetRecordsIteratorAgeAlarm6B710C39": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamReadProvisionedThroughputExceededAlarm530C042A": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRole02A0AEFA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRoleDefaultPolicyAAE313AA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamEB30AB36",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRoleDefaultPolicyAAE313AA",
        "Roles": Array [
          Object {
            "Ref": "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRole02A0AEFA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`check eventbus property, snapshot & eventbus exists 1`] = `
Object {
  "Resources": Object {
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWCustomEventBusE379FB3A": Object {
      "Properties": Object {
        "Name": "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWCustomEventBusC4EC5A85",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWEventsRule3B0BBD02": Object {
      "Properties": Object {
        "Description": "event rule props",
        "EventBusName": Object {
          "Ref": "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWCustomEventBusE379FB3A",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamEB30AB36",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRole02A0AEFA",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamEB30AB36": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamGetRecordsIteratorAgeAlarm6B710C39": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamReadProvisionedThroughputExceededAlarm530C042A": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRole02A0AEFA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRoleDefaultPolicyAAE313AA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWKinesisStreamEB30AB36",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRoleDefaultPolicyAAE313AA",
        "Roles": Array [
          Object {
            "Ref": "testeventsrulekinesisstreamsdefaultparameterstesteventsrulekinesisstreamsdefaultparametersWeventsRole02A0AEFA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`check multiple constructs in a single stack 1`] = `
Object {
  "Resources": Object {
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WCustomEventBusCB793FD2": Object {
      "Properties": Object {
        "Name": "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WCustomEventBus370A4667",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WEventsRule68EE3DEC": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WCustomEventBusCB793FD2",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WKinesisStream405ABD89",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WeventsRoleF8A00A46",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WKinesisStream405ABD89": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WKinesisStreamGetRecordsIteratorAgeAlarm10EF9BCB": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WKinesisStreamReadProvisionedThroughputExceededAlarm130E52F3": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WeventsRoleDefaultPolicy887766E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WKinesisStream405ABD89",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WeventsRoleDefaultPolicy887766E9",
        "Roles": Array [
          Object {
            "Ref": "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WeventsRoleF8A00A46",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testneweventsrulekinesisstreams1testneweventsrulekinesisstreams1WeventsRoleF8A00A46": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WCustomEventBus104AF840": Object {
      "Properties": Object {
        "Name": "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WCustomEventBus153160C3",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WEventsRule80162E43": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WCustomEventBus104AF840",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WKinesisStream652ED8BF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WeventsRole052FF25B",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WKinesisStream652ED8BF": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WKinesisStreamGetRecordsIteratorAgeAlarmC6800575": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WKinesisStreamReadProvisionedThroughputExceededAlarm27C47D57": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WeventsRole052FF25B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WeventsRoleDefaultPolicy9776E535": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WKinesisStream652ED8BF",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WeventsRoleDefaultPolicy9776E535",
        "Roles": Array [
          Object {
            "Ref": "testneweventsrulekinesisstreams2testneweventsrulekinesisstreams2WeventsRole052FF25B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`snapshot test EventsRuleToKinesisStreams existing event bus params 1`] = `
Object {
  "Resources": Object {
    "testexistingeventbusC6E4A2D0": Object {
      "Properties": Object {
        "Name": "testexistingeventbus",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWEventsRule93E97062": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testexistingeventbusC6E4A2D0",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWKinesisStream75CA0531",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWeventsRole5CA69F99",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWKinesisStream75CA0531": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWKinesisStreamGetRecordsIteratorAgeAlarm12C7C44D": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWKinesisStreamReadProvisionedThroughputExceededAlarm52D4EB2F": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWeventsRole5CA69F99": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWeventsRoleDefaultPolicyE5FEBF35": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWKinesisStream75CA0531",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWeventsRoleDefaultPolicyE5FEBF35",
        "Roles": Array [
          Object {
            "Ref": "testexistingeventsrulekinesisstreamstestexistingeventsrulekinesisstreamsWeventsRole5CA69F99",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
